src/test/deca/syntax/valid/homemade/test/test_pars_val_class_class_body_mult1.deca
// Description:
//    Programme minimaliste testant la regle class body
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

class iden {
    
    protected int x = 8;
    int iden4 (type3 iden5) asm ("string");

    float y;
}