src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_protected_maj.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (expected protected ou vide)
//    
//
// Historique:
//    cree le 04/01/2023

class iden3{
    Protected int iden = 8;
}